--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Folk Home - Find your dream house</title>
+  <title>BeulahRealEstate - Find your dream house</title>
 
   <!-- 
     - favicon
@@ -99,7 +99,7 @@
       <div class="container">
 
         <a href="#" class="logo">
-          <img src="./assets/images/logo.png" alt="Beulah logo">
+          <img src="./assets/images/logo-light.png" alt="Beulah logo" class="logo-img">
         </a>
 
         <nav class="navbar" data-navbar>
@@ -1995,7 +1995,7 @@
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="./assets/images/logo-light.png" alt="Homeverse logo">
+            <img src="./assets/images/logo-light.png" alt="Beulah logo" class="logo-img">
           </a>
 
           <p class="section-text">
