--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,7 @@
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./assets/images/2+1 Premier1.jpeg" alt="Modern Apartments" class="w-100">
+                    <img src="./assets/images/property-1.jpg" alt="Modern Apartments" class="w-100">
                   </a>
 
                   <div class="card-badge orange">For Sales</div>
