--- a/index.html
+++ b/index.html
@@ -1263,7 +1263,7 @@
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./assets/images/2+1 Infinity.png" alt="Comfortable Apartment" class="w-100">
+                    <img src="./assets/images/2+1 Infinity Plus.jpg" alt="Comfortable Apartment" class="w-100">
                   </a>
 
                   <div class="card-badge green">For Rent</div>
@@ -1499,7 +1499,7 @@
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./assets/images/2+1 Infinity Grand.jpeg" alt="Luxury villa in Rego Park" class="w-100">
+                    <img src="./assets/images/2+1 Infinity.png" alt="Luxury villa in Rego Park" class="w-100">
                   </a>
 
                   <div class="card-badge green">For Rent</div>
