--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./assets/images/property-3.jpg" alt="Comfortable Apartment" class="w-100">
+                    <img src="./assets/images/property-1.jpg" alt="Comfortable Apartment" class="w-100">
                   </a>
 
                   <div class="card-badge green">For Rent</div>
@@ -771,7 +771,7 @@
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./assets/images/property-3.jpg" alt="Comfortable Apartment" class="w-100">
+                    <img src="./assets/images/property-1.jpg" alt="Comfortable Apartment" class="w-100">
                   </a>
 
                   <div class="card-badge green">For Rent</div>
@@ -889,7 +889,7 @@
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./assets/images/property-4.png" alt="Luxury villa in Rego Park" class="w-100">
+                    <img src="./assets/images/property-1.jpg" alt="Luxury villa in Rego Park" class="w-100">
                   </a>
 
                   <div class="card-badge green">For Rent</div>
