--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
             <h2 class="h1 hero-title" data-aos="fade-up" data-aos-delay="400">Find Your Dream House By Us</h2>
     
             <p class="hero-text" data-aos="fade-up" data-aos-delay="600">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
+              Your dream home is just a few clicks away. Whether you're looking for a cozy apartment or a spacious family house, Beulah Real Estate has the perfect property for you.
+            Explore prime listings across top locations and let our expert agents guide you through every step of the process.
             </p>
     
             <button class="btn" data-aos="zoom-in" data-aos-delaBeulahy="800">Make An Enquiry</button>
