--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
   <title>BeulahRealEstate - Find your dream house</title>
 
   <!-- 
-    - favicon
-  -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
-
-  <!-- 
     - custom css link
   -->
   <link rel="stylesheet" href="./assets/css/style.css">
-
+  <link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8/wcAAwAB/klE29kAAAAASUVORK5CYII=">
 
  <!-- 
+    - Remove favicon
+  -->
+  <link rel="icon" href="data:,">
+
+
+  <!-- 
     - google icon
   -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
 
   <!-- 
     - google font link
@@ -38,6 +38,7 @@
   -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
 </head>
+
 
 <body>
 
